test_regress/t/t_class_typedef.out
%Error-UNSUPPORTED: t/t_class_typedef.v:12:4: Unsupported: Class '::' reference
   12 |    uvm_resource_types::rsrc_q_t rtab [string];
      |    ^~~~~~~~~~~~~~~~~~
%Error: t/t_class_typedef.v:12:24: Can't find typedef: 'rsrc_q_t'
   12 |    uvm_resource_types::rsrc_q_t rtab [string];
      |                        ^~~~~~~~
%Error-UNSUPPORTED: t/t_class_typedef.v:14:4: Unsupported: Class '::' reference
   14 |    uvm_resource_types#(1,2,3)::rsrc_q_t rtab_paramed [string];
      |    ^~~~~~~~~~~~~~~~~~
%Error: t/t_class_typedef.v:14:32: Can't find typedef: 'rsrc_q_t'
   14 |    uvm_resource_types#(1,2,3)::rsrc_q_t rtab_paramed [string];
      |                                ^~~~~~~~
%Error: Exiting due to
